# vibeVoice

./: .env.example  .gitignore  EVALUATION_LOG.md  MOUSE_CONTROL_EDGE_CASES.md  README.md  all_assets.txt  brain.py  context.md  ear.py  evaluate_dataset.py  hud.py  pyproject.toml  requirements.txt  solution_should_be.md  start.sh  streaming.md  temporaryFile.md  test_ax.py  test_hud_live.py  test_speech.aiff  test_vad.py  test_vad2.py
docs/: THEMES.md
evaluation/: parakeet_v2_streaming_evaluation.py
feedback-loop/: verify_startup.py
llm-response-to-speech/: README.md  __init__.py
logs/: evaluation_report.json
scripts/: colab_training_pipeline.py  evaluate_dataset.py  fix_macos_deps.py  setup_nemotron.py  test_audio.py  test_hud_visual.py  test_keys.py  test_nemotron_inference.py  test_theme_menu.sh  theme_demo.py
src/: __init__.py  backend_faster_whisper.py  backend_openvino.py  backend_parakeet.py  brain.py  ear.py  env_utils.py  hud.py  streaming_session_telemetry.py  streaming_shared_logic.py  text_refiner.py  theme_config.py  theme_manager.py  vad_segmenter.py
tests/: conftest.py  test_backend.py  test_backend_data_record_telemetry.py  test_backend_parakeet.py  test_backend_state.py  test_brain.py  test_brain_nemotron.py  test_colab_manifest_builder.py  test_colab_training_pipeline_syntax.py  test_ear.py  test_ear_fft.py  test_ear_hold_state.py  test_ear_nemotron.py  test_ear_recording_mode.py  test_engines_base.py  test_engines_nemotron.py  test_engines_parakeet.py  test_env_manager.py  test_env_utils.py  test_generic_openai_provider.py  test_hud_floating_pill.py  test_hud_logging.py  test_hud_menu_bar.py  test_hud_themes.py  test_input_hotkeys.py  test_integration.py  test_ipc_messenger.py  test_ipc_protocol.py  test_llm_router.py  test_nemotron_backend.py  test_parakeet_v2_streaming_evaluation.py  test_pyproject_dependencies.py  test_startup_refiner_config.py  test_streaming_session.py  test_streaming_session_logic.py  test_streaming_session_telemetry.py  test_streaming_shared_logic.py  test_telemetry_deep_audit.py  test_text_refiner.py  test_theme_config.py  (+3 more)
(+102 files in other folders)
